--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,22 +34,40 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BanQuanAo
 excludes=
 file.reference.commons-codec-1.11.jar=D:\\PRO\\library_add\\commons-codec-1.11.jar
+file.reference.commons-codec-1.11.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\commons-codec-1.11.jar
 file.reference.commons-collections4-4.2.jar=D:\\PRO\\library_add\\commons-collections4-4.2.jar
+file.reference.commons-collections4-4.2.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\commons-collections4-4.2.jar
 file.reference.commons-compress-1.18.jar=D:\\PRO\\library_add\\commons-compress-1.18.jar
+file.reference.commons-compress-1.18.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\commons-compress-1.18.jar
 file.reference.flatlaf-3.1.1.jar=D:\\PRO\\library_add\\flatlaf-3.1.1.jar
+file.reference.flatlaf-3.1.1.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\flatlaf-3.1.1.jar
 file.reference.jasperreports-xalan-7.0.0.jar=D:\\PRO\\library_add\\jasperreports-xalan-7.0.0.jar
+file.reference.jasperreports-xalan-7.0.0.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\jasperreports-xalan-7.0.0.jar
 file.reference.jcalendar-1.4.jar=D:\\PRO\\library_add\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=D:\\PRO\\library_add\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=D:\\PRO\\library_add\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\jfreechart-1.0.19.jar
 file.reference.jgoodies-common-1.2.0.jar=D:\\PRO\\library_add\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-common-1.2.0.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=D:\\PRO\\library_add\\jgoodies-looks-2.4.1.jar
+file.reference.jgoodies-looks-2.4.1.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=D:\\PRO\\library_add\\junit-4.6.jar
+file.reference.junit-4.6.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\junit-4.6.jar
+file.reference.mssql-jdbc-9.2.1.jre8.jar=C:\\Users\\ADMIN\\Downloads\\mssql-jdbc-9.2.1.jre8.jar
 file.reference.poi-4.0.1.jar=D:\\PRO\\library_add\\poi-4.0.1.jar
+file.reference.poi-4.0.1.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\poi-4.0.1.jar
 file.reference.poi-ooxml-4.0.1.jar=D:\\PRO\\library_add\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\poi-ooxml-4.0.1.jar
 file.reference.poi-ooxml-schemas-4.0.1.jar=D:\\PRO\\library_add\\poi-ooxml-schemas-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\poi-ooxml-schemas-4.0.1.jar
 file.reference.sqljdbc42.jar=D:\\PRO\\library_add\\sqljdbc42.jar
+file.reference.sqljdbc42.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\sqljdbc42.jar
 file.reference.xmlbeans-3.0.2.jar=D:\\PRO\\library_add\\xmlbeans-3.0.2.jar
+file.reference.xmlbeans-3.0.2.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\xmlbeans-3.0.2.jar
 file.reference.zxing.jar=D:\\PRO\\library_add\\zxing.jar
+file.reference.zxing.jar-1=C:\\Users\\ADMIN\\Downloads\\Vu\\DuAn1\\library_add\\zxing.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -69,7 +87,25 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.xmlbeans-3.0.2.jar}:\
-    ${file.reference.zxing.jar}
+    ${file.reference.zxing.jar}:\
+    ${file.reference.commons-codec-1.11.jar-1}:\
+    ${file.reference.commons-collections4-4.2.jar-1}:\
+    ${file.reference.commons-compress-1.18.jar-1}:\
+    ${file.reference.flatlaf-3.1.1.jar-1}:\
+    ${file.reference.jasperreports-xalan-7.0.0.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.jgoodies-common-1.2.0.jar-1}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar-1}:\
+    ${file.reference.junit-4.6.jar-1}:\
+    ${file.reference.poi-4.0.1.jar-1}:\
+    ${file.reference.poi-ooxml-4.0.1.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar-1}:\
+    ${file.reference.sqljdbc42.jar-1}:\
+    ${file.reference.xmlbeans-3.0.2.jar-1}:\
+    ${file.reference.zxing.jar-1}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
